--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,6 @@ header{
   background-color: #0e1833;
 }
 
-header.scrolled {
-  background-color: rgb(41, 41, 41);
-}
-
 #nav{
   width: 100%;
   height: 75px;
@@ -181,10 +177,49 @@ header #nav a{
   font-size: 11px;
 }
 
-  #playerimg{
-    max-height: 100%;
-    max-width: 100%;
-    grid-row: 1 / 4;
-    grid-column: 1 / 3;
-    z-index: 0;
-  }
+#playerimg{
+  max-height: 100%;
+  max-width: 100%;
+  grid-row: 1 / 4;
+  grid-column: 1 / 3;
+  z-index: 0;
+}
+
+#news_titel{
+  margin: 50px 0px 20px 0px;
+}
+
+#home_news{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+
+.news{
+  width: 400px;
+  height: 280px;
+  background-color: #252525;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 15px;
+  display: grid;
+  grid-template-rows: 80% 10% 10%;
+}
+
+
+.news h3{
+  grid-row: 2 / 3;
+  font-size: 20px;
+  color: #fefefe;
+  text-align: left;
+  align-self: center;
+}
+
+.news a{
+  text-decoration: none;
+  color: #fefefe;
+  text-align: left;
+  align-self: center;
+}
