--- a/src/App.css
+++ b/src/App.css
@@ -205,9 +205,15 @@ header #nav a{
   padding: 10px;
   margin: 15px;
   display: grid;
-  grid-template-rows: 80% 10% 10%;
+  grid-template-rows: 80% 15% 5%;
 }
 
+.news img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  grid-row: 1 / 2;
+}
 
 .news h3{
   grid-row: 2 / 3;
