--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ header #nav a{
 }
 
 #home_players_list{
-  max-width: 1000px;
+  max-width: 1100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,53 +136,62 @@ header #nav a{
 }
 
 .mini_player{
-  width: 100px;
-  height: 147px;
-  background-image: url('img/player_card_small.png');
+  width: 150px;
+  height: 225px;
   background-size: cover;
   display: grid;
-  grid-template-rows: 30px 20px 65px 28px;
-  grid-template-columns: 30px 62px;
+  grid-template-rows: 2% 76% 9% 1% 9%;
+  grid-template-columns: 4% 67% 4% 18% 5% 2%;
   margin: 10px;
-  padding: 5px;
-}
-
-.mini_player p{
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  font-size: 20px;
-  z-index: 1;
-}
-
-.mini_player img{
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  width: 100%;
-  border-radius: 5px;
-  z-index: 1;
-}
-
-.mini_player h3{
-  grid-row: 4 / 5;
-  grid-column: 1 / 3;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  font-size: 11px;
 }
 
 #playerimg{
-  max-height: 100%;
-  max-width: 100%;
-  grid-row: 1 / 4;
-  grid-column: 1 / 3;
+  width: 100%;
+  grid-row: 2 / 5;
+  grid-column: 2 / 5;
   z-index: 0;
+  border-radius: 5% 5% 0% 0%;
+}
+
+#mini_player_card{
+  grid-row: 1 / 7;
+  grid-column: 1 / 6;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
+.mini_player p{
+  grid-column: 4 / 5;
+  grid-row: 3 / 4;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  font-weight: bold;
+  font-size: 15px;
+  z-index: 1;
+}
+
+#mini_player_club{
+  grid-column: 4 / 5;
+  grid-row: 5 / 6;
+  justify-self: center;
+  align-self: center;
+  z-index: 1;
+  width: 90%;
+}
+
+.mini_player h3{
+  grid-row: 4 / 6;
+  grid-column: 2 / 3;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  font-size: 14px;
+  overflow: hidden;
 }
 
 #news_titel{
@@ -194,7 +203,6 @@ header #nav a{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-
 }
 
 .news{
