--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ header{
   align-items: center;
   transition: background-color 0.5s ease-in-out;
   background-color: #0e1833;
+  z-index: 1000;
 }
 
 #nav{
@@ -63,12 +64,17 @@ header #nav a{
   color: #fefefe;
 }
 
+.container{
+  display: flex;
+  justify-content: center;
+}
+
 #homepage_bg{
   background-image: url('img/bg_pc.jpg');
   width: 100%;
   height: 100vh;
   background-size: cover;
-  filter: brightness(0.03);
+  filter: brightness(0.05);
   position: fixed;
   z-index: -1;
 }
@@ -130,9 +136,7 @@ header #nav a{
   max-width: 1100px;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
-  margin-top: 20px;
 }
 
 .mini_player{
@@ -140,7 +144,7 @@ header #nav a{
   height: 225px;
   background-size: cover;
   display: grid;
-  grid-template-rows: 2% 76% 9% 1% 9%;
+  grid-template-rows: 2% 75% 10% 2% 7%;
   grid-template-columns: 4% 67% 4% 18% 5% 2%;
   margin: 10px;
 }
@@ -168,8 +172,9 @@ header #nav a{
   justify-content: center;
   align-self: center;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 16px;
   z-index: 1;
+  -webkit-text-stroke: 1px #000;
 }
 
 #mini_player_club{
@@ -182,20 +187,22 @@ header #nav a{
 }
 
 .mini_player h3{
-  grid-row: 4 / 6;
+  grid-row: 5 / 6;
   grid-column: 2 / 3;
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
   justify-content: center;
   align-items: center;
   z-index: 1;
   font-size: 14px;
+  margin-left: 1px;
   overflow: hidden;
+  flex-wrap: wrap;
 }
 
+
 #news_titel{
-  margin: 50px 0px 20px 0px;
+  margin-top: 50px;
 }
 
 #home_news{
@@ -236,4 +243,14 @@ header #nav a{
   color: #fefefe;
   text-align: left;
   align-self: center;
+}
+
+#players_list{
+  width: 80vw;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  color: #fefefe;
+  text-align: center;
 }
