--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   scroll-behavior: smooth;
 }
 
+@font-face{
+  font-family: 'strengthen';
+  src: url('fonts/Strengthen.ttf');
+}
+
 /* Components */
 
 /* Character Cards */
@@ -171,6 +176,17 @@ header{
   z-index: -1;
 }
 
+#background_svg{
+  width: 100%;
+  height: 110%;
+  position: fixed;
+  z-index: -1;
+  background-color: #FEFEFE;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(360,939,465)'%3E%3Cstop offset='0' stop-color='%23FEFEFE'/%3E%3Cstop offset='1' stop-color='%23D6D6D6'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='415' height='345.8' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.05'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 /* Homepage */
 #homepage {
   display: flex;
@@ -259,8 +275,7 @@ header{
 /* Squad Builder */
 .build_container{
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  justify-content: center;
 }
 
 #builder{
@@ -271,7 +286,6 @@ header{
   display: grid;
   grid-template-rows: 28% 23% 23% 23%;
   grid-template-columns: 100%;
-  justify-content: center;
   color: #fefefe;
   text-align: center;
   margin-top: 20px;
@@ -280,13 +294,14 @@ header{
 #GK{
   grid-row: 4 / 5;
   display: flex;
-  margin: 0 auto;
   justify-content: center;
   align-items: center;
   z-index: 5;
 }
 
 #DF{
+  width: 90%;
+  margin: 0 auto;
   grid-row: 3 / 4;
   display: flex;
   justify-content:space-around;
@@ -295,6 +310,8 @@ header{
 }
 
 #MF{
+  width: 80%;
+  margin: 0 auto;
   grid-row: 2 / 3;
   display: flex;
   justify-content:space-around;
@@ -303,6 +320,8 @@ header{
 }
 
 #FW{
+  width: 70%;
+  margin: 0 auto;
   grid-row: 1 / 2;
   display: flex;
   justify-content:space-around;
@@ -325,29 +344,32 @@ header{
 }
 
 #dropdown{
-  width: 80vh;
+  margin: 100px;
+  user-select: none;
 }
 
 #dropdown select{
-  width: 20%;
-  height: 50px;
+  font-family: strengthen;
+  background-color: transparent;
   border-radius: 10px;
-  background-color: #252525;
-  text-align: center;
-  font-weight: bold;
   border: 0;
-  padding: 5px;
-  color: #fefefe;
-  font-size: 25px;
-  margin: 10px 0px 10px 0px;
+  color: #545454;
+  font-size: 100px;
+  height: 20%;
+  user-select: none;
 }
 
 #dropdown option{
-  background-color: #252525;
-  color: #fefefe;
+  font-family: strengthen;
+  background-color: #fefefe;
+  color: #545454;
   font-weight: bold;
   text-align: center;
+  user-select: none;
+  pointer-events: none;
 }
+
+
 /* */
 
 /* Moves */
