--- a/src/App.css
+++ b/src/App.css
@@ -118,47 +118,60 @@
 /* */
 
 /*    */
-body{
-  padding-top: 65px;
-}
 
 header{
   display: flex;
+  flex-direction: column;
   position: fixed;
-  top: 0;
-  width: 100%;
-  height: 65px;
-  align-items: center;
-  background-color: #1b1b1b;
-  z-index: 1000;
+  width: 8%;
+  height: 100%;
+  background-color: #08070f;
+  border-right: 1px solid #474747;
 }
 
-#nav{
+nav{
   width: 100%; 
-  height: 75px;
+  height: 80%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 0 20px;
-  justify-content: right;
 }
 
 #logo{
-  margin-left: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
 }
 
 #logo img{
-  height: 50px;
+  height: 60px;
 }
 
-#nav ul{
+nav ul{
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50%;
   list-style: none;
 }
 
-#nav li a{
-  margin: 0 15px;
+nav li{
   text-decoration: none;
-  color: #fefefe;
+}
+
+#terms_of_use{
+  display: flex;
+  justify-content: center;
+
+}
+
+header svg{
+  fill: #474747;
+  width: 40px;
 }
 
 .container{
@@ -410,3 +423,91 @@ header{
   margin-top: 20px;
 }
 /* */
+
+
+/* New Homepage */
+
+#home_container{
+  width: 100vw;
+  height: 100vh;
+  background-image: url('img/other/homepage_bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-position-x: 23vw;
+}
+
+#home_fade{
+  width: auto;
+  height: 100%;
+  background: rgb(8,7,15);
+  background: linear-gradient(119deg, rgba(8,7,15,1) 0%, rgba(8,7,15,1) 44%, rgba(8,7,15,0) 100%);
+  display: flex;
+  margin-left: 8%;
+}
+
+#home_text{
+  display: flex;
+  flex-direction: column;
+  color: #fefefe;
+  text-align: left;
+  height: 100%;
+  width: 50%;
+  justify-content: center;
+  margin-left: 5%;
+}
+
+#home_text h1{
+  font-size: 85px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#home_text p{
+  width: 60%;
+  font-size: 23px;
+  margin-bottom: 20px;
+}
+
+#news_button{
+  width: 200px;
+  height: 50px;
+  background-color: #68afad;
+  border: 0;
+  color: #fefefe;
+  font-size: 25px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2px;
+  text-decoration: none;
+  border-radius: 30px;
+  font-weight: bold;
+}
+
+#extra_nav{
+  display: flex;
+  position: fixed;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  text-decoration: none;
+  list-style: none;
+  color: none;
+  justify-content: space-between;
+  margin-left: 4%;
+}
+
+#extra_nav ul{
+  display: flex;
+  justify-content: space-between;
+  width: 27%;
+}
+
+#extra_nav a{
+  text-decoration: none;
+  list-style: none;
+  color: #fefefe;
+  font-size: 20px;
+}
