--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   align-items: center;
   align-self: flex-start;
   cursor: pointer;
-  animation: playerCardAnimation 0.5s ease-in-out;
+  animation: PopUp 0.5s ease-in-out;
   border: 2px solid #ffffff;
   background-color: #252525;
   border-radius: 5px;
@@ -312,7 +312,7 @@ header svg.active{
   display: flex;
   margin-top: 20px;
   flex-wrap: wrap;
-  animation: playerCardAnimation 0.5s ease-in-out;
+  animation: PopUp 0.5s ease-in-out;
 }
 
 #big_player_container{
@@ -356,7 +356,7 @@ header svg.active{
   align-items: flex-start;
   width: 55vw;
   color: #fefefe;
-  animation: playerCardAnimation 0.75s ease-in-out;
+  animation: PopUp 0.75s ease-in-out;
 }
 
 .players_position{
@@ -375,7 +375,37 @@ header svg.active{
   width: 100%;
 }
 
-@keyframes playerCardAnimation {
+.player{
+  width: 150px;
+  height: 225px;
+  display: grid;
+  grid-template-rows: 75% 25%;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #161616;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23B3B3B3' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23909090'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+#player_img{
+  width: 150%;
+  grid-row: 1 / 2;
+  z-index: 1;
+  justify-self: center;
+}
+
+#player_Name{
+  grid-row: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #e0e0e0;
+  color: #202020;
+  z-index: 2;
+}
+
+@keyframes PopUp {
   0% {
     opacity: 0;
     transform: scale(0.9);
@@ -406,7 +436,7 @@ header svg.active{
   color: #fefefe;
   text-align: center;
   margin-top: 20px;
-  animation: playerCardAnimation 0.75s ease-in-out;
+  animation: PopUp 0.75s ease-in-out;
 }
 
 #GK{
@@ -500,6 +530,7 @@ header svg.active{
   overflow: hidden;
 }
 
+
 #moves_searchbar{
   display: flex;
   margin-top: 20px;
@@ -525,63 +556,47 @@ header svg.active{
 }
 
 .moves{
-  display: grid;
-  height: 150px;
-  width: 800px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  height: 67px;
+  width: 600px;
   margin: 5px;
-  border-radius: 5px;
-  border: 1px solid #938AF1;
-  background-color: #1b1833;
   color: #fefefe;
-  grid-template-rows: 30% 20% 20% 20% 10%;
-  grid-template-columns: 5% 15% 20% 25% 35%;
-  z-index: 1;
-  overflow: hidden;
+  transition: 1.5s;
 }
 
-#moves_bg{
+.moves:hover{
+  transition-delay: .2s;
+  transform: scale(2);
+  margin: 50px;
+  cursor: pointer;
+}
+
+#element_banner{
+  z-index: -1;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  background: rgb(27, 24, 51);
-  background: linear-gradient(90deg, rgb(20, 18, 37) 0%, rgba(20, 18, 37,1) 65%, rgba(27, 24, 51,0) 75%);
-  width: 800px;
-  height: 147px;
-  margin: 0px;
-  z-index: 1;
-  pointer-events: none;
-  border-radius: 5px;
-}
-
-.moves *{
-  margin: 10px;
-  grid-row: 2 / 3;
-  z-index: 2;
-}
-
-#move_type{
-  grid-column: 1 / 3;
 }
 
 .moves h3{
-  grid-row: 1 / 2;
-  grid-column: 2 / 4;
+  margin: 20px;
+  font-size: 40px;
+  font-weight: lighter;
 }
 
 .moves img{
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
   width: 25px;
 }
 
 .moves iframe{
-  grid-column: 5 / 6;
-  grid-row: 1 / 6;
-  width: 100%;
+  width: 20%;
   height: 100%;
-  margin: 0px;
-  z-index: 0;
-  border-radius: 5px;
+  margin-left: auto;
   cursor: pointer;
 }
+
 /* */
 
 /* News */
