--- a/src/App.css
+++ b/src/App.css
@@ -377,13 +377,11 @@ header svg.active{
 
 .player{
   width: 150px;
-  height: 225px;
-  display: grid;
+  height: 150px;
   grid-template-rows: 75% 25%;
   border-radius: 5px;
   overflow: hidden;
-  background-color: #161616;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23B3B3B3' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23909090'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+  margin: 5px;
 }
 
 #player_img{
@@ -558,17 +556,19 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .moves{
   display: flex;
   position: relative;
-  align-items: center;
+  flex-direction: column;
   height: 67px;
   width: 600px;
   margin: 5px;
   color: #fefefe;
   transition: 1.5s;
+  overflow: hidden;
 }
 
 .moves:hover{
+  height: 405px;
   transition-delay: .2s;
-  transform: scale(2);
+  transform: scale(1.2);
   margin: 50px;
   cursor: pointer;
 }
@@ -576,14 +576,17 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 #element_banner{
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 67px;
   position: absolute;
 }
 
 .moves h3{
-  margin: 20px;
+  margin-left: 20px;
+  margin-top: 13px;
+  margin-bottom: 9px;
   font-size: 40px;
   font-weight: lighter;
+  width: 600px;
 }
 
 .moves img{
@@ -591,10 +594,11 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .moves iframe{
-  width: 20%;
+  width: 100%;
   height: 100%;
   margin-left: auto;
   cursor: pointer;
+  
 }
 
 /* */
